# branchrepair

./: .gitignore  README.md  __init__.py  bamboogle_api_suite.md  launch_bamboogle_api_suite.sh  pyproject.toml  run_bamboogle_api_suite.py
Natural_Language_Graph_Debate_case5_claim_schema_nl_graph_mad_work_20260507_065013/docs/: bamboogle_api_suite.md
Natural_Language_Graph_Debate_case5_claim_schema_nl_graph_mad_work_20260507_065013/scripts/: generate_deepseek_round0_history.py  run_bamboogle_api_suite.py  run_baseline_methods_batch.py  run_compare_origin_vs_nl_graph_batch.py
Natural_Language_Graph_Debate_case5_claim_schema_nl_graph_mad_work_20260507_065013/src/: local_evaluator.py  local_origin_mad.py  local_rm.py  local_runtime_backend.py  pipeline.py  protocol.py  runtime.py  splitter.py
data/bamboogle/: cases.json
scripts/: _local_bootstrap.py  launch_bamboogle_api_suite.sh  run_bamboogle_api_suite.py  run_general_label_reasoning_compare_split.py
src/: __init__.py  label_answer.py  mcq_answer.py  models.py  prompts.py  short_answer.py  target_answer.py  target_contract.py
