[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natural-language-graph-debate"
version = "0.1.0"
description = "Standalone natural-language graph debate pipeline"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["Natural_Language_Graph_Debate*"]
